Base de datos actualizada

--- a/public/perfil.html
+++ b/public/perfil.html
@@ -15,7 +15,7 @@
     <!-- The profile bits -->    
     <div><img class="icon" src="nevertheless.png"></div>
     <div>
-      <div class="userName">Nombre Usuario <a href="editarPerfil.html"><button class="editbut">Editar Perfil</button></a></div><br>
+      <div class="userName">Nombre Usuario <a href="editarPerfil.html"><button class="editbut">Editar Perfil</button></a></div>
       <div class="desc">Descripcion</div>
     </div>
     <div class="colecTitle">Mis Coleciones</div>
